fixing flex on mobile

--- a/bftb/style_bftb.css
+++ b/bftb/style_bftb.css
@@ -53,7 +53,10 @@ header {
   border-radius: initial;
   padding: initial;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
+}
+.story {
+  flex-direction: row-reverse !important;
 }
 main {
   background-color: var(--mainbg);
